--- a/PetMate/src/pages/Adotar.css
+++ b/PetMate/src/pages/Adotar.css
@@ -15,12 +15,14 @@
   color: #654833;
   margin-bottom: 10px;
   font-weight: 800;
+  font-family: 'Raleway';
   
 }
 
 .titulo-adotar p{
   font-size: 24px;
-  font-family: fredoka;
+  font-family: nunito;
+  font-weight: 600;
 }
 
 .titulo-botao-adotar{
@@ -37,7 +39,7 @@
   height: 60px;
   font-weight: 600;
   font-size: 24px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'nunito', sans-serif;
   background-color: #84644D;
   color: #F5F5F5;
   border: 2px #484848;
