--- a/PetMate/src/components/Navbar.css
+++ b/PetMate/src/components/Navbar.css
@@ -13,11 +13,11 @@
     flex-direction: row;
     min-width: 100vw;
     align-items: center;
-    /* justify-content: space-evenly; */
     justify-content: center;
     padding: 10px;
     height: 120px;
     background-color: #84644D;
+    box-shadow: 0px 0px 10px 10px #312319
     
 
 }
@@ -70,49 +70,46 @@ a{
     width: 120px;
 }
 
-.loginNav, .cadastroNav{
-    font-family: Roboto;
+.loginNav, .cadastroNav {
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 20px;
     width: 170px;
     height: 45px;
     border-radius: 12px;
     letter-spacing: 0.04em;
+    transition: all 0.3s ease;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.loginNav{
-    /* border: solid #312319 2px; */
+.loginNav {
     border: none;
-    background-color: #fbfbfb;
+    background-color: #EBE5E0;
     color: #312319;
     margin-right: 20px;
+    font-family: 'nunito', sans-serif;
 }
 
-.cadastroNav{
+.cadastroNav {
     border: none;
     color: #F5F5F5;
     background-color: #654833;
-}
-
-.loginNav:hover, .cadastroNav:hover{
-    cursor: pointer;
-}
-.nav-logado{
-    display: flex;
-    align-items: center;
-}
-
-.botao-modal-navbar{
-    padding: 3px;
-    width: 200px;
-    height: 50px;
-    font-weight: 600;
-    font-size: 24px;
     font-family: 'nunito', sans-serif;
-    font-weight: bold;
-    background-color: #fbfbfb;
-    color: #654833;
-    border: 2px #484848;
-    border-radius: 8px;
-    cursor: pointer;
 }
+
+.loginNav:hover, .cadastroNav:hover {
+    cursor: pointer;
+    transform: translateY(-2px);
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.15);
+}
+
+.loginNav:hover {
+    background-color: #D4C9C1;
+    color: #312319;
+}
+
+.cadastroNav:hover {
+    background-color: #543A28;
+    color: #F5F5F5;
+}
+
