--- a/PetMate/src/components/ModalExcluirPet.css
+++ b/PetMate/src/components/ModalExcluirPet.css
@@ -11,33 +11,46 @@
     border: none;
     cursor: pointer;
     border-radius: 10px;
+    transition: 0.3s;
     
 }
 
-.conteiner_modal_Exclui{
+
+.modal-excluir-pet{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+.container-excluir-pet{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: auto;
     min-height: 40vh;
     background-color: #FFFFFF;
-    border-radius: 20px;
-    width: 35vw;
-    box-shadow: 2px 2px 4px #545454;
-    margin-top: 240px;
-    border: #644732 solid;
+    border-radius: 10px;
+    width: 30vw;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    border: 3px solid #6b4f3a;
+    /* margin-top: 50vh; */
+}
+.botao_modal_excluir:hover {
+    background-color: #6b4f3a;
+    transform: scale(1.05);
 }
 
-.modal_conteiner_Exclui{
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    backdrop-filter: blur(2px);
-    z-index: 1000;
+.botao_modal_cancelar:hover {
+    background-color: #a67c5b;
+    transform: scale(1.05);
 }
-
 .meio-modal{
     display: flex;
     flex-direction: column;
@@ -54,8 +67,9 @@
 .Botao_Exclui button{
     padding: 10px;
 }
-.texto_Exclui{
-    margin-top: 40px;
+.texto-excluir-pet{
+    margin-top: 80px;
     font-size: 14px;
     text-align: center;
+    color: #333;
 }
