--- a/PetMate/src/components/Navbar.css
+++ b/PetMate/src/components/Navbar.css
@@ -14,10 +14,11 @@
     min-width: 100vw;
     align-items: center;
     justify-content: center;
+    
     padding: 10px;
     height: 120px;
     background-color: #84644D;
-    box-shadow: 0px 0px 10px 10px #312319
+    /* box-shadow: 0px 0px 10px 10px #312319 */
     
 
 }
@@ -31,6 +32,20 @@
 
 a{
     font-size: 26px;
+}
+
+.botao-modal-navbar{
+    /* padding: 3px; */
+    width: 120px;
+    height: 50px;
+    font-weight: 600;
+    font-size: 16px;
+    font-family: 'nunito', sans-serif;
+    background-color: #654833;
+    color: #F5F5F5;
+    border: 2px #484848;
+    border-radius: 12px;
+    cursor: pointer;
 }
 
 
@@ -79,7 +94,7 @@ a{
     border-radius: 12px;
     letter-spacing: 0.04em;
     transition: all 0.3s ease;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); */
 }
 
 .loginNav {
@@ -113,3 +128,15 @@ a{
     color: #F5F5F5;
 }
 
+.nav-logado{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+}
+
+.boas-vindas{
+    font-family: 'nunito', sans-serif;
+    font-size: 20px;
+    color: #F5F5F5;
+}
