--- a/PetMate/src/pages/Contato.css
+++ b/PetMate/src/pages/Contato.css
@@ -10,10 +10,10 @@
 
 }
 
-.banner-contato img{
+/* .banner-contato img{
     min-width: 100vw;
     height: auto;
-}
+} */
 
 .meio-info-container{
     display: flex;
