editar pet concluido

--- a/PetMate/src/components/BarraFiltro.css
+++ b/PetMate/src/components/BarraFiltro.css
@@ -23,7 +23,7 @@
     color: white;
     font-size: 20px;
     font-family: Raleway;
-    font-weight: 600;
+    font-weight: 6cd 00;
 }
 
 .filtro-container select {
