--- a/PetMate/src/components/ModalExcluirPet.css
+++ b/PetMate/src/components/ModalExcluirPet.css
@@ -1,21 +1,3 @@
-.botao_modal_excluir, .botao_modal_cancelar{
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    margin-bottom: 10px;
-    font-size: 30px;
-    font-weight: bold;
-    background-color: #84644D;
-    color: #FFFFFF;
-    padding: 5px;
-    margin-left: 30px;
-    border: none;
-    cursor: pointer;
-    border-radius: 10px;
-    transition: 0.3s;
-    
-}
-
-
 .modal-excluir-pet{
     position: fixed;
     top: 0;
@@ -36,27 +18,47 @@
     min-height: 40vh;
     background-color: #FFFFFF;
     border-radius: 10px;
-    width: 30vw;
+    width: 36vw;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
     border: 3px solid #6b4f3a;
-    /* margin-top: 50vh; */
-}
-.botao_modal_excluir:hover {
-    background-color: #6b4f3a;
-    transform: scale(1.05);
 }
 
-.botao_modal_cancelar:hover {
+
+.botao-modal-excluir-pet, .botao-modal-cancelar-pet {
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 10px 20px;
+    margin-left: 10px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    height: 55px;
+    width: 150px;
+    transition: background-color 0.3s ease;
+}
+
+.botao-modal-cancelar-pet{
+    background-color: #84644D;
+    color: #EBE5E0;
+}
+.botao-modal-excluir-pet{
+    background-color: #EBE5E0;
+    border: 1px solid #6b4f3a;
+    color: #333;
+}
+.botao-modal-excluir-pet:hover {
+    /* background-color: #6b4f3a; */
+}
+
+.botao-modal-cancelar-pet:hover {
     background-color: #a67c5b;
-    transform: scale(1.05);
 }
-.meio-modal{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: auto;
-}
+
+
 
 .Botao_Exclui{
     margin-top: 20px;
@@ -67,9 +69,19 @@
 .Botao_Exclui button{
     padding: 10px;
 }
+
 .texto-excluir-pet{
     margin-top: 80px;
-    font-size: 14px;
+}
+.texto-excluir-pet h1 {
+    font-size: 27px;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.texto-excluir-pet p{
+    /* margin-top: 80px;  */
+    font-size: 20px;
     text-align: center;
     color: #333;
 }
