--- a/PetMate/src/components/ModalExclusaoDeConta.css
+++ b/PetMate/src/components/ModalExclusaoDeConta.css
@@ -1,39 +1,3 @@
-.botao_modal_excluir, .botao_modal_cancelar {
-    background-color: #84644D;
-    color: #FFFFFF;
-    margin-bottom: 10px;
-    font-size: 18px;
-    font-weight: bold;
-    padding: 10px 20px;
-    margin-left: 10px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.botao_modal_excluir:hover {
-    background-color: #6b4f3a;
-}
-
-.botao_modal_cancelar:hover {
-    background-color: #a67c5b;
-}
-
-.conteiner_modal_Exclui {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: auto;
-    min-height: 40vh;
-    background-color: #FFFFFF;
-    border-radius: 10px;
-    width: 30vw;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    border: 3px solid #6b4f3a;
-}
-
 .modal_conteiner_Exclui {
     position: fixed;
     top: 0;
@@ -46,6 +10,22 @@
     align-items: center;
     z-index: 1000;
 }
+.conteiner_modal_Exclui {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    min-height: 40vh;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    width: 36vw;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+    border: 3px solid #6b4f3a;
+}
+
 
 .meio-modal {
     display: flex;
@@ -54,10 +34,52 @@
     text-align: center;
 }
 
+
+.botao-modal-excluir-conta, .botao-modal-cancelar-conta {
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 10px 20px;
+    margin-left: 10px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    height: 55px;
+    width: 150px;
+    transition: background-color 0.3s ease;
+}
+
+.botao-modal-cancelar-conta{
+    background-color: #84644D;
+    color: #EBE5E0;
+}
+.botao-modal-excluir-conta{
+    background-color: #EBE5E0;
+    border: 1px solid #6b4f3a;
+    color: #333;
+}
+.botao-modal-excluir-conta:hover {
+    /* background-color: #6b4f3a; */
+}
+
+.botao-modal-cancelar-conta:hover {
+    background-color: #a67c5b;
+}
+
+
+
+
 .texto_Exclui h1 {
     font-size: 27px;
     color: #333;
     margin-bottom: 20px;
+}
+
+.texto_Exclui{
+    margin-top: 80px;
+    font-size: 20px;
+    text-align: center;
+    color: #333;
 }
 
 .Botao_Exclui {
